# Vectora

./: .clangd  .gitignore  CMakeLists.txt  references.txt
Sandbox/: FlappyBird.cpp  FlappyBird.hpp  SandboxApp2D.cpp  SandboxApp2D.h  main.cpp
Vectora-ScriptCore/: CMakeLists.txt
Vectora-ScriptCore/Source/: Cameara.cs  KeyCodes.cs  Player.cs  main.cs
Vectora-ScriptCore/Source/Vectora/: Entity.cs  Input.cs  InternalCalls.cs  Vector2.cs  Vector3.cs
Vectora-ScriptCore/Source/Vectora/Scene/: Components.cs  Entity.cs
Vectora_Editor/: EditorLayer.cpp  EditorLayer.hpp  FlappyBird.cpp  FlappyBird.hpp  RCa23784  SandboxApp2D.cpp  SandboxApp2D.h  main.cpp  resource.aps  resource.rc
Vectora_Editor/Panels/: ContentBrowserPanel.cpp  SceneHirearchyPanel.cpp  SceneHirearchyPanel.h
Vectora_Editor/Resources/sceneees/: Debug-Win64.vectora  Physics2D Circle.vectora  PinkCube.vectora  PinkCubeEC.vectora  imgui.ini  soenainglin,yarzar,shmavectora.vectora  sys.vectora  testtt.vectora
Vectora_Editor/Resources/sceneees/SceneID/: PinkCube.vectora
Vectora_Editor/SandboxProj/Assets/Scripts/: CMakeLists.txt
Vectora_Editor/SandboxProj/Assets/Scripts/Source/: Cameara.cs  Player.cs
Vectora_Engine/: Application.cpp  Application.h  Camera.cpp  Camera.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  OrthographiCamera.cpp  OrthographiCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Test.cpp  Test.h  Vectora.h  Window.h  lib.cpp  vpch.h
Vectora_Engine/Core/: Application.cpp  Application.h  Assert.h  Camera.h  CmdArgumentHandler.cpp  CmdArgumentHandler.h  Core.h  DiscordManager.cpp  DiscordManager.h  EntryPoint.h  Input.h  KeyCodes.h  Log.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.h
Vectora_Engine/Debug/: Instrumentor.h
Vectora_Engine/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Vectora_Engine/Math/: Math.cpp  Math.h
Vectora_Engine/Renderer/: AssimpToGlm.hpp  Bone.cpp  Bone.h  Buffer.cpp  Buffer.h  EditorCamera.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographiCamera.cpp  OrthographiCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Renderer3D.cpp  Renderer3D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SkeAnimation.cpp  SkeAnimation.h  SkeAnimator.cpp  SkeAnimator.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Vectora_Engine/Scene/: Components.cpp  Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  ScriptableEntity.h
Vectora_Engine/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Vectora_Engine/Utils/: PlatformUtils.h
Vectora_Engine/imgui/: ImGuiLayer.cpp  ImGuiLayer.h
Vectora_Engine/shaders/: Renderer2D_Line.fragment.glsl  Renderer2D_Line.vertex.glsl  Renderer2D_Quad.fragment.glsl  Renderer3D_Cube.fragment.glsl  Renderer3D_Cube.vertex.glsl  Renderer3D_Model.fragment.glsl  Renderer3D_Model.vertex.glsl  Texture.fragment.glsl  Texture.vertex.glsl  blueRect.fragment.glsl  blueRect.vertex.glsl  blueRectFg.glsl  blueRectVt.glsl  circle.vertex.glsl  circleFg.glsl  ray.fragment.glsl  ray.vertex.glsl  rayVt.glsl  vertex.glsl
includes/entt/: entt.hpp
src/: main.cpp
temp/: resource.aps
